# BallEngineForDesktop

./: CMakeLists.txt  README.md  define.h  main.cpp
BaseType/: BImage.cpp  BImage.h  BPaster.cpp  BPaster.h  BString.cpp  BString.h  BThread.cpp  BThread.h
ComplexType/: BAssets.cpp  BAssets.h  BConfig.cpp  BConfig.h  BFile.cpp  BFile.h  BPaster.cpp  BPaster.h  BThread.cpp  BThread.h  BWindow.cpp  BWindow.h
Core/: BWindow.cpp  BWindow.h  BallEngine.cpp  BallEngine.h  Manager.cpp  Manager.h  SystemInterface.cpp  SystemInterface.h  define.h
Header/: Define.h  SingletonClassDefine.h
Helper/: HTPPHelper.cpp  HTPPHelper.h  HTTPHelper.cpp  HTTPHelper.h  INFHelper.cpp  INFHelper.h  LogHelper.cpp  LogHelper.h  NetHelper.cpp  NetHelper.h
Manager/: AudioManager.cpp  AudioManager.h  GameManager.cpp  GameManager.h  PasterManager.cpp  PasterManager.h  ScriptManager.cpp  ScriptManager.h
Other/: BImage.cpp  BImage.h  BLogger.cpp  BLogger.h  BString.cpp  BString.h  BThread.cpp  BThread.h
PlatformInterface/: GLInterface.cpp  GLInterface.h  QtInterface.cpp  QtInterface.h
Template/: BallEngine.cpp  BallEngine.h  Manager.cpp  Manager.h  SystemInterface.cpp  SystemInterface.h
